# DesignPatterns

./: README.md
visitor/: CMakeLists.txt  LICENSE.md  README.md  output.txt
visitor/src/: circle.cpp  rectangle.cpp  shape_area_visitor.cpp  triangle.cpp
visitor/test/: CMakeLists.txt  main.cpp
